# OASIS-information

./: CONTRIBUTING.md  LICENSE  Makefile  README.md
deployment/ci/: ci.yml
docs/: CHANGELOG.md  INDEX.md  QUICK_START.md  README.md  api_gateway.md  data_flow.md  monitoring.md  security.md
docs/api/: README.md  authentication.md  openapi.yaml
docs/api-reference/: sdk.md  webhooks.md
docs/infrastructure/: iac.md
infrastructure/: docker-compose.yml
services/ai-copilot-service/: .env.example  Dockerfile  README.md
services/analytics-service/: .env.example  Dockerfile  README.md
services/auth-service/: Dockerfile  go.mod  main.go
services/collaboration-service/: .env.example  Dockerfile  README.md
services/compliance-service/: .env.example  Dockerfile  README.md
services/discovery-service/: .env.example  Dockerfile  README.md
services/export-service/: .env.example  Dockerfile  README.md
services/gap-engine/: .env.example  Dockerfile  README.md  requirements.txt
services/integration-service/: .env.example  Dockerfile  README.md
services/knowledge-graph-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/knowledge-graph-service/migrations/: 001_create_nodes.sql
services/knowledge-graph-service/scripts/: entrypoint.sh
services/knowledge-graph-service/src/: main.py  models.py  routes.py  schemas.py
services/knowledge-graph-service/tests/: test_health.py
services/monitoring-service/: .env.example  Dockerfile  README.md
services/novelty-engine/: .env.example  Dockerfile  README.md  requirements.txt
(+45 files in other folders)
