[tool.poetry]
name = "knowledge-graph-service"
version = "0.1.0"
description = "ResearchOS Knowledge Graph Service"
authors = ["ResearchOS Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
psycopg2-binary = "^2.9.0"
redis = "^5.0.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
neo4j = "^5.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
pylint = "^3.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
